fix: theme flicker

--- a/app/app.css
+++ b/app/app.css
@@ -80,7 +80,8 @@
   --sidebar-ring: oklch(0.709 0.01 56.259);
 }
 
-.dark {
+.dark,
+:root[class~="dark"] {
   --background: oklch(0.147 0.004 49.25);
   --foreground: oklch(0.985 0.001 106.423);
   --card: oklch(0.216 0.006 56.043);
